
public static class PAP
{
    public const string DirX = "DirX";
    public const string VelY = "VelY";
    public const string DirY = "DirY";
    public const string OnGround = "OnGround";
    public const string OnAir = "OnAir";
    public const string IsMoving = "IsMoving";
    public const string Jump = "OnAir";
    public const string DoubleJump = "DoubleJump";
    public const string WallCollision = "WallCollision";
    public const string LastDirX = "LastDirX";
    public const string WallSliding = "WallSliding";
    public const string Die = "Die";
    public const string IsDying = "IsDying";
    
}